<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_listing"
    android:orientation="vertical">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:elevation="2dp"
        android:outlineProvider="background"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:background="@drawable/bg_edittext"
        android:orientation="vertical">

        <com.cambium.challenge.components.RalewaySemiBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:padding="@dimen/margin_normal"
            android:text="@string/label_about_me"
            android:textSize="@dimen/font_medium" />

        <com.cambium.challenge.components.RalewayLightTextView
            android:id="@+id/tv_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:padding="@dimen/margin_normal"
            android:text=""
            android:textSize="@dimen/font_normal" />
        <com.cambium.challenge.components.RalewayLightTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingLeft="@dimen/margin_normal"
            android:text="@string/website"
            android:textSize="@dimen/font_normal" />

        <com.cambium.challenge.components.RalewayLightTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingTop="2dp"
            android:paddingLeft="@dimen/margin_normal"
            android:text="@string/label_version"
            android:textSize="@dimen/font_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal">

            <com.cambium.challenge.components.RalewayRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:includeFontPadding="false"
                android:padding="2dp"
                android:text="@string/text_made_with"
                android:textSize="@dimen/font_small" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"

                android:src="@drawable/ic_heart" />

            <com.cambium.challenge.components.RalewayRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:includeFontPadding="false"
                android:text="@string/text_second_last"
                android:textSize="@dimen/font_small" />


        </LinearLayout>

        <com.cambium.challenge.components.RalewayRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_large"

            android:layout_marginLeft="2dp"
            android:includeFontPadding="false"
            android:text="@string/text_last"
            android:textSize="@dimen/font_small" />

    </LinearLayout>

</RelativeLayout>